FloatingPoint: Removed forbidden API calls.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/fix_floatingpoint_calculator@46175 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c